--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,10 @@
     "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.11"
+    "react-hook-form": "^7.60.0",
+    "react-router-dom": "^7.7.0",
+    "tailwindcss": "^4.1.11",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
