--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.5.2",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.7.0",
+    "react-toastify": "^11.0.5",
     "zod": "^4.0.5"
   },
   "devDependencies": {
